# kinova_pid

./: CMakeLists.txt  package.xml
include/: core.h  filter.h  gen3.h  spline.h
include/kortex_api/common/: ExtendedJointPosition.hpp  KinovaDynacmis.hpp  LPF.hpp
src/: gen3.cpp  gen3_node.cpp
